--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="navabr.css"></head>
+    <link rel="stylesheet" href="navbar.css"></head>
     <!-- Add this to your HTML <head> section for the free version -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <body>
